Adding smart class filtering in the feedback no classes with messed up times or wrong terms
